personal-portfolio website complete

--- a/web-portfolio/index.html
+++ b/web-portfolio/index.html
@@ -11,7 +11,55 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Welcome To</h1>
-    <h1><span class="name-highlight"> Localhost</span> Website</h1>
+    <section class="top-banner">
+      <div class="half-width">
+        <h1>Welcome To</h1>
+        <h1><span class="orange-highlight"> JhankarBhai</span> Website</h1>
+        <h3>World-class Professional Developer</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime corrupti quasi obcaecati aut saepe asperiores perferendis totam. Beatae
+          aliquid iusto et hic voluptas. Quas quaerat excepturi reiciendis aspernatur repellendus id.
+        </p>
+        <a class="link-button" href="https://www.jhankarmahbub.com/ " target="_blank">HIRE ME</a>
+      </div>
+      <div class="half-width">
+        <img src="/images/jhankar.png" />
+      </div>
+    </section>
+    <section class="dream-area">
+      <div class="half-width"><img src="./images/jhankar2.png" /></div>
+      <div class="half-width">
+        <h2>Dream Big</h2>
+        <h3>Become World's No.1 Developer</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis molestias officia eveniet consequuntur officiis enim fuga voluptas
+          soluta molestiae in? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, explicabo!
+        </p>
+        <a href="#" class="link-button">Download RESUME</a>
+      </div>
+    </section>
+    <section class="experience-area">
+      <h2>Experiences</h2>
+      <div class="half-width single-experience" id="full-stack">
+        <h3>Full Stack web developer</h3>
+        <h4 class="orange-highlight">2021 - Present | Pro level web Dev</h4>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex sequi magni dolores voluptatum, saepe itaque consequuntur, suscipit recusandae
+          expedita assumenda tenetur! Harum cum maxime est deleniti doloribus vero dicta aperiam!
+        </p>
+      </div>
+      <div class="half-width single-experience" id="baby-web">
+        <h3>Baby Web Developer</h3>
+        <h4 class="orange-highlight">2019 - 2020 | Programing Learner</h4>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex sequi magni dolores voluptatum, saepe itaque consequuntur, suscipit recusandae
+          expedita assumenda tenetur! Harum cum maxime est deleniti doloribus vero dicta aperiam!
+        </p>
+      </div>
+      <div class="half-width"></div>
+    </section>
+    <footer>
+      <p>&copy; Localhost 2022, all right reserved</p>
+    </footer>
   </body>
 </html>
