--- a/pioneer-bank/index.html
+++ b/pioneer-bank/index.html
@@ -18,10 +18,57 @@
       <h1 class="text-center">Welcome to Pioneer Bank</h1>
       <div class="submit-area">
         <h4>Login</h4>
-        <input type="text" />
-        <input type="password" />
-        <button>Enter</button>
+        <input type="text" class="form-control" placeholder="Email" />
+        <br />
+        <input type="password" class="form-control" placeholder="Password" />
+        <br />
+        <button class="btn btn-success" id="login-btn">Enter</button>
       </div>
     </div>
+    <div id="transaction-area">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="deposit status">
+            <h5>
+              Deposit
+              <h2>$00</h2>
+            </h5>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="withdraw status">
+            <h5>
+              Withdraw
+              <h2>$00</h2>
+            </h5>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="balance status">
+            <h5>
+              Balance
+              <h2>$1240</h2>
+            </h5>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <h4>Deposit<input type="text" name="" id="" class="form-control" /><button class="btn"></button></h4>
+        </div>
+        <div class="col-md-6">
+          <h4>Deposit<input type="text" name="" id="" class="form-control" /><button class="btn"></button></h4>
+        </div>
+      </div>
+    </div>
+    <script>
+      const loginBtn = document.getElementById("login-btn");
+      loginBtn.addEventListener("click", function () {
+        const loginArea = document.getElementById("login-area");
+        loginArea.style.display = "none";
+        const TransactionArea = document.getElementById("transaction-area");
+        TransactionArea.style.display = "block";
+      });
+    </script>
   </body>
 </html>
