feat: quantity and price list updation done

--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -1,82 +1,135 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Shopping Cart</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
+  </head>
 
-<head>
-   <title>Shopping Cart</title>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
-   <link href="style.css" rel="stylesheet">
-</head>
-
-<body>
-
-   <section>
+  <body>
+    <section>
       <div class="container">
-         <div class="cart">
-            <div class="col-md-12 col-lg-10 mx-auto">
-               <div class="cart-item">
-                  <div class="row">
-                     <div class="col-md-7 center-item">
-                        <img src="images/product-1.png" alt="">
-                        <h5>iPhone 11 128GB Black</h5>
-                     </div>
+        <div class="cart">
+          <div class="col-md-12 col-lg-10 mx-auto">
+            <div class="cart-item">
+              <div class="row">
+                <div class="col-md-7 center-item">
+                  <img src="images/product-1.png" alt="" />
+                  <h5>iPhone 11 128GB Black</h5>
+                </div>
 
-                     <div class="col-md-5 center-item">
-                        <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="text" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
-                        </div>
-                        <h5>$1219</h5>
-                        <img src="images/remove.png" alt="" class="remove-item">
-                     </div>
+                <div class="col-md-5 center-item">
+                  <div class="input-group number-spinner" id="phone">
+                    <button class="btn btn-default"><i class="fas fa-minus"></i></button>
+                    <input type="text" class="form-control text-center" value="1" />
+                    <button class="btn btn-default"><i class="fas fa-plus"></i></button>
                   </div>
-               </div>
-
-               <div class="cart-item">
-                  <div class="row">
-                     <div class="col-md-7 center-item mx-auto">
-                        <img src="images/product-2.png" alt="">
-                        <h5>iPhone 11 Silicone Case - Black</h5>
-                     </div>
-                     <div class="col-md-5 center-item">
-                        <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="text" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
-
-                        </div>
-                        <h5>$59</h5>
-                        <img src="images/remove.png" alt="" class="remove-item">
-                     </div>
-                  </div>
-               </div>
-
-               <div class="cart-item">
-                  <div class="row">
-
-                     <div class="col-md-8">
-                        <h5>Subtotal: </h5>
-                        <h5>Tax:</h5>
-                        <h5>Total:</h5>
-                     </div>
-
-                     <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-md-12 pt-4 pb-4">
-                  <button type="button" class="btn btn-success check-out">Check Out</button>
-               </div>
+                  <h5>$<span id="phone-price">1219</span></h5>
+                  <img src="images/remove.png" alt="" class="remove-item" />
+                </div>
+              </div>
             </div>
-         </div>
-      </div>
-   </section>
-</body>
 
+            <div class="cart-item">
+              <div class="row">
+                <div class="col-md-7 center-item mx-auto">
+                  <img src="images/product-2.png" alt="" />
+                  <h5>iPhone 11 Silicone Case - Black</h5>
+                </div>
+                <div class="col-md-5 center-item">
+                  <div class="input-group number-spinner" id="phone-case">
+                    <button class="btn btn-default"><i class="fas fa-minus"></i></button>
+                    <input type="text" class="form-control text-center" value="1" />
+                    <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                  </div>
+                  <h5>$<span id="phone-case-price">59</span></h5>
+                  <img src="images/remove.png" alt="" class="remove-item" />
+                </div>
+              </div>
+            </div>
+
+            <div class="cart-item">
+              <div class="row">
+                <div class="col-md-8">
+                  <h5>Subtotal:</h5>
+                  <h5>Tax:</h5>
+                  <h5>Total:</h5>
+                </div>
+
+                <div class="col-md-4 status">
+                  <h5>$1,278</h5>
+                  <h5>$0</h5>
+                  <h5>$1,278</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-12 pt-4 pb-4">
+              <button type="button" class="btn btn-success check-out">Check Out</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script>
+      const initialPhonePrice = +document.getElementById("phone-price").innerText;
+      const initialPhoneCasePrice = +document.getElementById("phone-case-price").innerText;
+      // updating  quantity
+      const items = document.getElementsByClassName("number-spinner");
+      for (let index = 0; index < items.length; index++) {
+        const item = items[index];
+        const minusBtn = item.getElementsByTagName("button")[0];
+        const plusBtn = item.getElementsByTagName("button")[1];
+        const quantity = item.getElementsByTagName("input")[0];
+        const updateFor = item.id;
+        console.dir(item);
+        minusBtn.addEventListener("click", function () {
+          if (quantity.value > 0) {
+            updateQuantity(quantity, -1);
+            // updating item price
+            if (updateFor == "phone") {
+              updatePhone(false);
+            } else if (updateFor == "phone-case") {
+              updatePhoneCase(false);
+            }
+          }
+        });
+        plusBtn.addEventListener("click", function () {
+          updateQuantity(quantity, 1);
+          // updating item price
+          if (updateFor == "phone") {
+            updatePhone(true);
+          } else if (updateFor == "phone-case") {
+            updatePhoneCase(true);
+          }
+        });
+      }
+      
+      function updatePhone(isIncrement) {
+        const priceLabel = document.getElementById("phone-price");
+        if (isIncrement) {
+          updatePrice(priceLabel, initialPhonePrice);
+        } else {
+          updatePrice(priceLabel, -1 * initialPhonePrice);
+        }
+      }
+      function updatePhoneCase(isIncrement) {
+        const priceLabel = document.getElementById("phone-case-price");
+        if (isIncrement) {
+          updatePrice(priceLabel, initialPhoneCasePrice);
+        } else {
+          updatePrice(priceLabel, -1 * initialPhoneCasePrice);
+        }
+      }
+      function updateQuantity(quantityElement, amountToChange) {
+        quantityElement.value = +quantityElement.value + +amountToChange;
+      }
+      function updatePrice(priceLabelElement, price) {
+        const currentPrice = +priceLabelElement.innerText;
+        priceLabelElement.innerText = currentPrice + price;
+      }
+    </script>
+  </body>
 </html>
