--- a/22_pin-matcher-master/index.html
+++ b/22_pin-matcher-master/index.html
@@ -12,15 +12,15 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="pin-generator half-width">
-                    <input class="form-control" type="text">
-                    <button class="generate-btn">Generate Pin</button>
+                    <input class="form-control" type="text" id="showPin">
+                    <button class="generate-btn" id="generatePin">Generate Pin</button>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="input-section half-width">
-                    <input class="form-control" type="text">
+                    <input class="form-control" type="text" id="typedPin">
                     <div class="numbers">
-                        <div class="calc-body">
+                        <div class="calc-body" id="calc-body">
                             <div class="calc-button-row">
                               <div class="button">7</div>
                               <div class="button">8</div>
@@ -42,17 +42,18 @@
                                 <div class="button">C</div>
                             </div>
                             <div>
-                                <button type="submit" class="submit-btn">Submit</button>
-                                <p class="action-left">3 try left</p>
+                                <button type="submit" class="submit-btn" id="submit-btn">Submit</button>
+                                <p class="action-left"><span id="try-count">3</span> try left</p>
                             </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="notify-section">
-            <p class="notify">❌ Pin Didn't Match, Please try again</p>
-            <p class="notify">✅ Pin Matched... Secret door is opening for you</p>
+            <p class="notify" id="error-notification">❌ Pin Didn't Match, Please try again</p>
+            <p class="notify" id="success-notification">✅ Pin Matched... Secret door is opening for you</p>
         </div>
     </div>
+    <script src="./Scripts.js"></script>
 </body>
 </html>
