--- a/29.5_issue-tracker/index.html
+++ b/29.5_issue-tracker/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Issue Tracker: </title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Issue Tracker:</title>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
   </head>
   <body onload="fetchIssues()">
     <div class="container">
-      <h1>Issue Tracker: </h1>
+      <h1>
+        Total Issues: <span id="closedIssueCount" class="badge badge-success">0</span>/<span id="totalIssueCount" class="badge badge-danger">0</span>
+      </h1>
       <div class="jumbotron">
         <h3>Add New Issue:</h3>
         <form id="issueInputForm">
           <div class="form-group">
             <label for="issueDescription">Description</label>
-            <input type="text" class="form-control" id="issueDescription" placeholder="Describe the issue ...">
+            <input type="text" class="form-control" id="issueDescription" placeholder="Describe the issue ..." />
           </div>
           <div class="form-group">
             <label for="issueSeverity">Severity</label>
@@ -28,19 +35,26 @@
           </div>
           <div class="form-group">
             <label for="issueAssignedTo">Assigned To</label>
-            <input type="text" class="form-control" id="issueAssignedTo" placeholder="Enter responsible ...">
+            <input type="text" class="form-control" id="issueAssignedTo" placeholder="Enter responsible ..." />
           </div>
           <button type="submit" class="btn btn-primary">Add</button>
         </form>
       </div>
       <div class="col-lg-12">
-        <div id="issuesList">
-        </div>
+        <div id="issuesList"></div>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.1.1.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"
+    ></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      crossorigin="anonymous"
+    ></script>
     <script src="main.js"></script>
   </body>
 </html>
