--- a/30_hard-rock/index.html
+++ b/30_hard-rock/index.html
@@ -60,23 +60,13 @@
         <div class="search-bar col-md-6 mx-auto">
           <h1 class="text-center">Hard Rock Lyric Search</h1>
           <div class="search-box my-5">
-            <input type="text" class="form-control" placeholder="Enter your artist song name" />
-            <button class="btn btn-success search-btn">Search</button>
+            <input type="text" class="form-control" placeholder="Enter your artist song name" id="search-input" />
+            <button class="btn btn-success search-btn" id="search-button">Search</button>
           </div>
         </div>
         <!-- Single Lyrics -->
-        <div class="single-lyrics text-center"></div>
-        <div class="search-result col-md-8 mx-auto py-4">
-          <div class="single-result row align-items-center my-3 p-3">
-            <div class="col-md-9">
-              <h3 class="lyrics-name">Purple Noon</h3>
-              <p class="author lead">Album by <span>Washed Out</span></p>
-            </div>
-            <div class="col-md-3 text-md-right text-center">
-              <button class="btn btn-success">Get Lyrics</button>
-            </div>
-          </div>
-        </div>
+        <div class="single-lyrics text-center" id="lyric"></div>
+        <div class="search-result col-md-8 mx-auto py-4" id="song-list"></div>
       </main>
     </div>
     <!-- Optional JavaScript -->
@@ -87,5 +77,6 @@
     ></script>
 
     <!-- Custom Script Here -->
+    <script src="./app.js"></script>
   </body>
 </html>
